syntax = "proto3";

package spine.test.tools.validate;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.tools.validate.event";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;

message ProjectCreated {

    string id = 1;
}
